# numerical-methods

./: .gitignore  Main.py  README.md  home.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
Methods/: BI.py  Fixed_point.py  Fixed_point_method.py  Incremental_Search_method.py  Multiple_Roots_method.py  Newton.py  Newton_method.py  Secant.py  Secant_method.py
interpolation/: Lagrange_View.py  NewtonDividedDiff_View.py  Spline_Cubic_View.py  Spline_Quadratic_View.py  Spline_View.py  Spline_quadratic.py  Vandermonde.py  Vandermonde_View.py  __init__.py  lagrange.py  newton_interpolation.py  report.py  spline.py  spline_cubic.py  utils.py  vandermonde.py
linear_systems/: Gauss_Seidel_View.py  Gauss_seidel.py  Jacobi.py  Jacobi_View.py  LU_Factorization_View.py  LU_factorization.py  PLU_factorization.py  PLU_factorization_View.py  SOR_View.py  __init__.py  gauss_seidel.py  jacobi.py  matrix_helpers.py  report.py  sor.py  ui.py  utils.py
methods/: generate_table.py  input.py
pages/: 1_Fixed_point.py  1_Punto_Fijo.py  2_Multiple_roots.py  2_Raices_Multiples.py  3_Newton.py  5_Busquedas_Incrementales.py  6_Secant.py  6_Secante.py
single_variable/: Bisection_View.py  FixedPoint_View.py  Incremental.py  Incremental_View.py  MultipleRoots_View.py  Newton_View.py  RegulaFalsi_View.py  Secant_View.py  __init__.py  bisection.py  common.py  false_position.py  fixed_point.py  multiple_roots.py  newton.py  newton_raphson.py  regula_falsi.py  report.py  secant.py
utils/: general.py  generate_linear_systems_report.py  generate_report.py  graph.py  input.py  (+1 more)
(+28 files in other folders)
