[project]
name = "numerical-methods"
requires-python = ">=3.11"
dependencies = [
    "matplotlib (>=3.10.3,<4.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "sympy (>=1.14.0,<2.0.0)",
    "kaleido (==0.1.0)",
    "plotly (>=6.0.1,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false


[tool.isort]
profile = "black"
